Fix for scrollbars appearing when making the window short

--- a/css/styles.less
+++ b/css/styles.less
@@ -210,6 +210,7 @@
     }
     > div:nth-child(2) { //log
       border-top: 1px solid gray;
+      overflow: hidden;
   }
 }
 
